src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Engage_a_Distributor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked then partner must buy through a distributor.</description>
        <label>Engage a Distributor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enterprise_Account_Tier__c</fullName>
        <label>Enterprise Account Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_UCS_Blades__c</fullName>
        <label>Estimated UCS Blades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_UCS_Renewal_Amount__c</fullName>
        <description>Estimated UCS Renewal Spend</description>
        <label>Estimated UCS Renewal (Amount)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_UCS_Renewal_Blades__c</fullName>
        <label>Estimated UCS Renewal (Blades)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_UCS_Spend__c</fullName>
        <description>Estimated UCS Spend from Flexpod target data</description>
        <label>Estimated UCS Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Evaluation_Meeting_Count__c</fullName>
        <label>Evaluation Meeting Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exclude_From_Auto_Bill__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manual Checkbox to exclude account from auto bill process</description>
        <label>Exclude From Auto Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Single switch to allow Reps to shut off general Marketo email blasts for all contacts and leads within the account</description>
        <inlineHelpText>Will exclude all leads and contacts on this account from general marketing emails</inlineHelpText>
        <label>Exclude from Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exec_Engagement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag an account to get on the exec’s radar.</description>
        <inlineHelpText>Flag account to get on the exec’s radar.</inlineHelpText>
        <label>Exec Engagement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FY_Top_Virtualization_Priority__c</fullName>
        <label>FY Top Virtualization Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Increase virtualization penetration</fullName>
                </value>
                <value>
                    <fullName>Infrastructure efficiencies</fullName>
                </value>
                <value>
                    <fullName>Operational efficiencies</fullName>
                </value>
                <value>
                    <fullName>Tech refresh</fullName>
                </value>
                <value>
                    <fullName>VDI initiative</fullName>
                </value>
                <value>
                    <fullName>Cloud initiative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finance_Notes__c</fullName>
        <label>Finance Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Close_Date__c</fullName>
        <inlineHelpText>Filled in automatically by workflow (Stamp First Close Date on Account - Opp workflow)</inlineHelpText>
        <label>First Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Close_Date_incl_PO__c</fullName>
        <description>Date of first closed won opportunity with an account, including opps currently in PO received</description>
        <label>First Close Date (incl PO)</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>PO received, Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>equals</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_Connect_Date__c</fullName>
        <label>First Connect Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Conversation_Date__c</fullName>
        <label>First Conversation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Demo_Date__c</fullName>
        <label>First Demo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Dial_Date__c</fullName>
        <label>First Dial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Evaluation_Meeting_Date__c</fullName>
        <label>First Evaluation Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Registration_Date__c</fullName>
        <label>First Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_End_Month__c</fullName>
        <label>Fiscal Year End Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlexPod__c</fullName>
        <label>FlexPod</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Focus_Account_Date_Stamp__c</fullName>
        <label>Focus Account Date (Stamp)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Focus_Account_Disposition_Notes__c</fullName>
        <description>Field to allow reps to enter in a few notes on why they are dispositioning one of their focus accounts</description>
        <label>Focus Account Disposition Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Focus_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Focus Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>For_Product_Usage_Snapshot__c</fullName>
        <formula>IF(AND(CONTAINS(TEXT(Product_Usage__c),&quot;Automate&quot;),NOT(ISBLANK(Type_s_of_Automation_Utilized__c))),
TEXT(Product_Usage__c)&amp;&quot; - &quot;&amp;
IF(INCLUDES(Type_s_of_Automation_Utilized__c,&quot;Compute vMotion&quot;),&quot;Compute vMotion&quot;,NULL)&amp;
IF(INCLUDES(Type_s_of_Automation_Utilized__c,&quot;Storage vMotion&quot;),&quot;Storage vMotion&quot;,NULL)&amp;
IF(INCLUDES(Type_s_of_Automation_Utilized__c,&quot;VM Rightsizing&quot;),&quot;VM Rightsizing&quot;,NULL),
TEXT(Product_Usage__c))</formula>
        <label>For Product Usage Snapshot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forbes_Public_100_Rank__c</fullName>
        <label>Forbes Private 100 Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fortune_Rank__c</fullName>
        <label>Fortune Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Discount__c</fullName>
        <inlineHelpText>Discount on fulfillment deals</inlineHelpText>
        <label>Fulfillment Discount</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Functions__c</fullName>
        <label>Functions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VAR</fullName>
                </value>
                <value>
                    <fullName>Intergrator</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gartner_Site_Class__c</fullName>
        <formula>IF(ISBLANK(Socket_Count__c),&quot;N/A&quot;,
IF(Socket_Count__c&gt;=9600,&quot;(e) Large&quot;,
IF(Socket_Count__c&gt;=1600,&quot;(d) Enterprise&quot;,
IF(Socket_Count__c&gt;=300,&quot;(c) Midsize&quot;,
IF(Socket_Count__c&gt;=10,&quot;(b) Rack/Computer Room&quot;,
&quot;(a) Single Site&quot;)))))</formula>
        <label>Gartner Site Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo_Group_Buckets__c</fullName>
        <description>Per Eric&apos;s request, this field segments accounts into the following buckets based on Territory Owner Team: NORAM, EMEA, LATAM, APAC and Alliances</description>
        <formula>CASE( AE_Rep__r.Team__c , 
&quot;The Green Flash&quot;,&quot;NORAM&quot;, 
&quot;The Pack Commercial&quot;,&quot;NORAM&quot;, 
&quot;The Pack&quot;,&quot;NORAM&quot;, 
&quot;The Green Monsters&quot;,&quot;NORAM&quot;, 
&quot;Closers Club&quot;,&quot;NORAM&quot;, 
&quot;Green Berets&quot;,&quot;NORAM&quot;, 
&quot;The Titans&quot;,&quot;NORAM&quot;, 
&quot;Spartans Commercial&quot;,&quot;NORAM&quot;, 
&quot;Spartans&quot;,&quot;NORAM&quot;, 
&quot;SEC&quot;,&quot;NORAM&quot;, 
&quot;Beast Coast&quot;,&quot;NORAM&quot;, 
&quot;The Kitchen&quot;,&quot;NORAM&quot;, 
&quot;The Foundation&quot;,&quot;NORAM&quot;, 
&quot;The Foundation Commercial&quot;,&quot;NORAM&quot;, 
&quot;The Bulldogs&quot;,&quot;NORAM&quot;, 
&quot;The Wild West&quot;,&quot;NORAM&quot;,
&quot;Notti by Nature&quot;,&quot;NORAM&quot;,
&quot;Shake n Bake&quot;,&quot;NORAM&quot;,
&quot;The Hunchbacks&quot;,&quot;NORAM&quot;, 
&quot;The Hounds&quot;,&quot;NORAM&quot;, 
&quot;Enterprise&quot;,&quot;NORAM&quot;, 
&quot;Enterprise East&quot;,&quot;NORAM&quot;,
&quot;Enterprise West&quot;,&quot;NORAM&quot;,
&quot;Enterprise North Central&quot;,&quot;NORAM&quot;,
&quot;Enterprise South Central&quot;,&quot;NORAM&quot;,
&quot;Enterprise West Oved&quot;,&quot;NORAM&quot;,
&quot;Enterprise West Ian&quot;, &quot;NORAM&quot;,
&quot;Enterprise Central&quot;, &quot;NORAM&quot;,
&quot;Wheelers and Dealers&quot;,&quot;NORAM&quot;, 
&quot;Federal&quot;,&quot;NORAM&quot;,
&quot;Ganas iOS&quot;,&quot;EMEA&quot;, 
&quot;Bangers n Cash&quot;,&quot;EMEA&quot;, 
&quot;E-Unit&quot;,&quot;EMEA&quot;, 
&quot;EMEA Enterprise&quot;,&quot;EMEA&quot;, 
&quot;Los Conquistadores&quot;,&quot;LATAM&quot;,
&quot;APAC Enterprise&quot;,&quot;APAC&quot;,
&quot;Global Accounts International&quot;,&quot;Alliances&quot;, 
&quot;Global Accounts US&quot;,&quot;Alliances&quot;, 
&quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geo (Group Buckets)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_2000_Rank__c</fullName>
        <label>Global 2000 Rank</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Graded_Partners_C_and_Above__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Graded Partners C and Above</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Green_Circle_ACtive__c</fullName>
        <formula>if(  Green_Circle_Registration_Date__c  &gt; TODAY() -90,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Green Circle Active User</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Green_Circle_Registration_Date__c</fullName>
        <description>Date this company joined the Green Circle</description>
        <label>Green Circle Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hardware_Vendor_Other__c</fullName>
        <inlineHelpText>Please list any hardware vendors not in our Hardware Vendor picklist.</inlineHelpText>
        <label>Hardware Vendor (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Vendor__c</fullName>
        <label>Hardware Vendor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arista</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>Nutanix</fullName>
                </value>
                <value>
                    <fullName>Oracle/Sun</fullName>
                </value>
                <value>
                    <fullName>SimpliVity</fullName>
                </value>
                <value>
                    <fullName>Other (Specify)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_24_7_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Customer Buys 24/7 Support.</description>
        <label>Has 24/7 Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Amazon_EC2__c</fullName>
        <description>Lattice Enrichment Field</description>
        <label>Has Amazon EC2?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lattice_Technologies_Enrichment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Azure__c</fullName>
        <description>Lattice Enrichment Field</description>
        <label>Has Azure?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lattice_Technologies_Enrichment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Cisco_UCS_Servers__c</fullName>
        <description>Lattice Enrichment Field</description>
        <label>Has Cisco UCS Servers?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lattice_Technologies_Enrichment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Flexpod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates whether the account is a flexpod target</description>
        <label>Has Flexpod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Microsoft_Azure_Stack__c</fullName>
        <description>Lattice Enrichment Field</description>
        <label>Has Microsoft Azure Stack?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lattice_Technologies_Enrichment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_OpenStack__c</fullName>
        <description>Lattice Enrichment Field</description>
        <label>Has OpenStack?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lattice_Technologies_Enrichment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Pure_Storage__c</fullName>
        <description>Lattice Enrichment Field</description>
        <label>Has Pure Storage?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lattice_Technologies_Enrichment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_VCE_Vblock__c</fullName>
        <description>Lattice Enrichment Field</description>
        <label>Has VCE Vblock?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lattice_Technologies_Enrichment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_VMware_vCenter_Operations__c</fullName>
        <description>Lattice Enrichment Field</description>
        <label>Has VMware vCenter Operations?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lattice_Technologies_Enrichment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_VMware_vCenter__c</fullName>
        <description>Lattice Enrichment Field</description>
        <label>Has VMware vCenter?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lattice_Technologies_Enrichment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_VMware_vRealize__c</fullName>
        <description>Lattice Enrichment Field</description>
        <label>Has VMware vRealize?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lattice_Technologies_Enrichment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highest_Stage_of_Active_Opp__c</fullName>
        <label>Highest Stage of Active Opp</label>
        <summarizedField>Opportunity.Stage_Value__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hybrid_Cloud_Intent__c</fullName>
        <description>The intensity of intent of the business shown in the topic - Hybrid Cloud during last week compared to 2 years history. The different levels are Very High, High, Medium, Low and Very Low. Very High and High mean the business has consumed more than average amount of information on the topic compared to other businesses and also shown an increase compared to its own levels of consumption. Very Low and Low would mean the business has shown lower than average consumption.</description>
        <inlineHelpText>High – Companies that have sharply increased consumption of this topic in the past week
Moderate – Companies that have notably increase consumption this topic in the past week
Normal – These companies have stayed near their baseline consumption</inlineHelpText>
        <label>Hybrid Cloud Intent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lattice_Intent_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hypervisor_Vendor_Other__c</fullName>
        <label>Hypervisor Vendor (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hypervisor_Vendor__c</fullName>
        <label>Hypervisor Vendor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VMware</fullName>
                </value>
                <value>
                    <fullName>Hyper-V (Microsoft)</fullName>
                </value>
                <value>
                    <fullName>Xen (Open Source)</fullName>
                </value>
                <value>
                    <fullName>Xen (Citrix)</fullName>
                </value>
                <value>
                    <fullName>KVM (Openstack)</fullName>
                </value>
                <value>
                    <fullName>KVM (Redhat)</fullName>
                </value>
                <value>
                    <fullName>OracleVM</fullName>
                </value>
                <value>
                    <fullName>Heterogeneous</fullName>
                </value>
                <value>
                    <fullName>IBM PowerVM</fullName>
                </value>
                <value>
                    <fullName>Acropolis</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other (Specify)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP12_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IP12 Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP6_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IP6 Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IR12_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IR12 Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IR6_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IR6 Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IT_Budget_Communications_Networking__c</fullName>
        <description>IT Budget Breakdown - Communication/Networking in Millions</description>
        <inlineHelpText>IT Budget for Communications/Networking (Mil)</inlineHelpText>
        <label>IT Budget (Communications/Networking)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IT_Budget_Hardware__c</fullName>
        <description>IT Budget Breakdown - Hardware in Millions</description>
        <inlineHelpText>IT Budget for Hardware (Mil)</inlineHelpText>
        <label>IT Budget (Hardware)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IT_Budget_Mil__c</fullName>
        <label>IT Budget (Mil)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IT_Budget_Other__c</fullName>
        <description>IT Budget Breakdown - Other in Millions</description>
        <inlineHelpText>IT Budget for Other (Mil)</inlineHelpText>
        <label>IT Budget (Other)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IT_Budget_Services_Outsourcing__c</fullName>
        <description>IT Budget Breakdown - Services/Outsourcing in Millions</description>
        <inlineHelpText>IT Budget for Services/Outsourcing (Mil)</inlineHelpText>
        <label>IT Budget (Services &amp; Outsourcing)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IT_Budget_Software__c</fullName>
        <description>IT Budget Breakdown - Software in Millions</description>
        <inlineHelpText>IT Budget for Software (Mil)</inlineHelpText>
        <label>IT Budget (Software)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IT_Budget_Storage__c</fullName>
        <description>IT Budget Breakdown - Storage in Millions</description>
        <inlineHelpText>IT Budget for Storage (Mil)</inlineHelpText>
        <label>IT Budget (Storage)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IT_Employees__c</fullName>
        <label>IT Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IT_Optimization_Intent__c</fullName>
        <description>The intensity of intent of the business shown in the topic - IT Optimization during last week compared to 2 years history. The different levels are Very High, High, Medium, Low and Very Low. Very High and High mean the business has consumed more than average amount of information on the topic compared to other businesses and also shown an increase compared to its own levels of consumption. Very Low and Low would mean the business has shown lower than average consumption.</description>
        <inlineHelpText>High – Companies that have sharply increased consumption of this topic in the past week
Moderate – Companies that have notably increase consumption this topic in the past week
Normal – These companies have stayed near their baseline consumption</inlineHelpText>
        <label>IT Optimization Intent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lattice_Intent_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_DiscoverOrg__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(DiscoverOrg_ID_VMT__c)),DiscoverOrg_Stopped_Coverage__c=FALSE),&quot;Yes&quot;,
IF(AND(NOT(ISBLANK(DiscoverOrg_ID_VMT__c)),DiscoverOrg_Stopped_Coverage__c=TRUE),&quot;Was (no longer covered)&quot;,
&quot;No&quot;))</formula>
        <label>In DiscoverOrg?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Green_Circle__c</fullName>
        <formula>IF(NOT(ISBLANK(Green_Circle_Registration_Date__c)),
&quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Green Circle?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_in_Focus_Accounts__c</fullName>
        <formula>IF(AND(	
OR(
	In_DiscoverOrg__c=&quot;Yes&quot;,
	NOT(ISBLANK(RainKing_ID__c)),
	AND(NOT(ISNULL(VM_Count__c)),VM_Count__c&gt;100),
	AND(NOT(ISNULL(Socket_Count__c)),Socket_Count__c&gt;20)
),RecordType.Name&lt;&gt;&quot;Partner&quot;),
true,false)</formula>
        <label>Include in Focus Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incremental_Bookings_Last_12_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Incremental Bookings (Last 12 Months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incremental_Bookings_Last_6_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Incremental Bookings (Last 6 Months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incremental_Pipe_Adds_Last_12_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Incremental Pipe Adds (Last 12 Months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incremental_Pipe_Adds_Last_6_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Incremental Pipe Adds (Last 6 Months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Industry_Bucket__c</fullName>
        <formula>CASE(Industry_clean__c,
&quot;&quot;,&quot;(Not specified)&quot;,
&quot;Service Providers&quot;,&quot;Service Providers&quot;,
&quot;Healthcare&quot;,&quot;Healthcare&quot;,
&quot;Tech: Internet&quot;,&quot;Technology&quot;,
&quot;Tech: All Other&quot;,&quot;Technology&quot;,
&quot;Education&quot;,&quot;Education&quot;,
&quot;Financial Services&quot;,&quot;FS &amp; Insurance&quot;,
&quot;Insurance&quot;,&quot;FS &amp; Insurance&quot;,
&quot;(Other)&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Mismatch__c</fullName>
        <formula>IF ( Industry_clean__c  !=  Industry_clean_text__c, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry Mismatch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry_clean_1__c</fullName>
        <label>Industry (clean) 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_clean_2__c</fullName>
        <label>Industry (clean) 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_clean_3__c</fullName>
        <label>Industry (clean) 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_clean__c</fullName>
        <formula>IF(Industry_clean_1__c&lt;&gt;&quot;Other&quot;,Industry_clean_1__c,
IF(Industry_clean_2__c&lt;&gt;&quot;Other&quot;,Industry_clean_2__c,
IF(Industry_clean_3__c&lt;&gt;&quot;Other&quot;,Industry_clean_3__c,
IF(Industry_clean_4__c&lt;&gt;&quot;Other&quot;,Industry_clean_4__c,
&quot;Other&quot;))))</formula>
        <inlineHelpText>See industry help text above.</inlineHelpText>
        <label>Industry (clean)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_clean_text__c</fullName>
        <label>Industry (clean - text)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_for_Use_Cases__c</fullName>
        <label>Industry for Use Cases</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_text__c</fullName>
        <formula>TEXT(Industry)</formula>
        <label>Industry (text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Infrastructure_Monitoring_Intent__c</fullName>
        <description>The intensity of intent of the business shown in the topic - Infrastructure Monitoring during last week compared to 2 years history. The different levels are Very High, High, Medium, Low and Very Low. Very High and High mean the business has consumed more than average amount of information on the topic compared to other businesses and also shown an increase compared to its own levels of consumption. Very Low and Low would mean the business has shown lower than average consumption.</description>
        <inlineHelpText>High – Companies that have sharply increased consumption of this topic in the past week
Moderate – Companies that have notably increase consumption this topic in the past week
Normal – These companies have stayed near their baseline consumption</inlineHelpText>
        <label>Infrastructure Monitoring Intent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lattice_Intent_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intended_Sales_Engineer__c</fullName>
        <label>Intended Sales Engineer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__CustomerInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Info</label>
        <referenceTo>JBCXM__CustomerInfo__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>JBCXM_Account_CustInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Java_Application_Server_Detail__c</fullName>
        <label>Java Application Server (Other)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>